--- a/resources/js/style.css
+++ b/resources/js/style.css
@@ -1,4 +1,4 @@
-@import "https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons";
+@import "https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900";
 
 .vendors-gradient {
     background: rgba(41, 128, 185, 0.31);
